[workspace]
members = [
    ".",
    # ワークスペース内の他のメンバー（今後追加時）/ Other workspace members as needed
]

[package]
name = "rust-computers-api"
version = "0.2.45"
edition = "2021"
authors = ["Tom039224"]
description = "Core runtime crate for RustComputers — run async Rust on Minecraft WASM computers"
license = "MIT"
repository = "https://github.com/tom039224/RustComputers"
readme = "README.md"

[lib]
crate-type = ["rlib"]

[dependencies]
# カスタムアロケータ (no_std 用) / Custom allocator for no_std
dlmalloc = { version = "0.2", features = ["global"] }
# serde (no_std + alloc)
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }

[features]
default = []

[profile.release]
opt-level = "s"       # サイズ最適化 / Optimize for size
lto = true            # Link-Time Optimization
strip = "debuginfo"   # デバッグ情報削除 / Strip debug info
codegen-units = 1     # 単一コード生成ユニット / Single codegen unit (better optimization)
